src/objects/CFS_Quiz_Data__c.object
<CustomObject>
    <fields>
        <fullName>Correct_Answers__c</fullName>
        <label>Correct Answers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incorrect_Answers__c</fullName>
        <label>Incorrect Answers</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Max_Attempts__c</fullName>
        <label>Max Attempts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passing_Score__c</fullName>
        <label>Passing Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quiz_Name__c</fullName>
        <label>Quiz Name</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Show_score__c</fullName>
        <label>Show score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CFS Quiz Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>External_Id__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Quiz_Name__c</columns>
        <columns>Question__c</columns>
        <columns>Type__c</columns>
        <columns>Incorrect_Answers__c</columns>
        <columns>Correct_Answers__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QDR-{0}</displayFormat>
        <label>CFS Quiz Data Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CFS Quiz Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>